# OpportunityMap

./: .editorconfig  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  render.yaml  requirements.txt  runtime.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_profile_activities.py  003_trim_activities.py  004_deadline_reminders.py  005_premium_payments.py  006_premium_yearly.py  007_activity_status.py  007_payment_webhooks.py  008_bookmark_status.py  010_auto_renew.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  premium.py  security.py
backend/app/jobs/: __init__.py  run_deadline_reminders.py
backend/app/models/: __init__.py  activity.py  activity_options.py  bookmark.py  enums.py  field.py  field_options.py  notification.py  opportunity.py  payment.py  profile.py  user.py
backend/app/schemas/: auth.py  bookmark.py  match.py  notification.py  opportunity.py  payment.py  profile.py
backend/app/services/: activity_field_map.py  auth_service.py  bookmark_service.py  deadline_reminder_service.py  email_service.py  matching_service.py  opportunity_service.py  payment_service.py  (+3 more)
backend/scripts/: start.sh
backend/tests/: test_payment_service.py  test_polar_service.py  test_renewal_reminder_service.py
scraper/: .env.example  README.md  devpost_detail.html  devpost_test.html  pyproject.toml
scraper/scraper/: config.py  curl_client.py  db.py  http_client.py  main.py  maintenance.py  repository.py
scraper/scripts/: check_db.py  debug_deadlines.py  debug_detail.py  debug_devpost.py  debug_devpost2.py  debug_hs_filters.py  debug_hs_search.py  debug_pagination.py  debug_pagination2.py  debug_pathways.py
(+71 files in other folders)
