[project]
name = "opportunitymap-scraper"
version = "0.1.0"
description = "OpportunityMap web scraper"
requires-python = ">=3.12"
dependencies = [
    "curl_cffi>=0.7.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "lxml>=5.3.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
opportunitymap-scraper = "scraper.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
